--- a/static/index.html
+++ b/static/index.html
@@ -201,7 +201,7 @@
       appendMessage(msg, "user");
       msgInput.value = "";
 
-      const response = await fetch("http://localhost:8000/chat", {
+      const response = await fetch("/chat", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ message: msg }),
