--- a/static/index.html
+++ b/static/index.html
@@ -140,10 +140,10 @@
   </style>
 </head>
 <body>
-  <div class="floating-buttons">
+<!--   <div class="floating-buttons">
     <a href="/login" class="btn login-btn">Login</a>
     <a href="/static/admin.html" target="_blank" class="btn">Chat History</a>
-  </div>
+  </div> -->
 
   <div class="page-wrapper">
     <div class="container">
